feat: Migrated to Spring Boot 4 (#756)
* feat: Migrated to Spring Boot 4

* fix: complete Spring Boot 4 circuit breaker migration (#759)

* fix: address Spring Boot 4 review feedback (#760)

* Fix Spring Boot 4 migration test issues

* Change server ID from 'ossrh' to 'central' in release.yml

---------

Co-authored-by: Roman Kvasnytskyi <rkvasnytskyi@playtika.com>